# rusty_chess

./: README.md
chess/: Cargo.toml
chess/board_plugin/: Cargo.toml
chess/src/: board.rs  components.rs  main.rs  mainX.rs  piece.rs
