[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[features] 
default = []
debug  = ["board_plugin/debug", "bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = {version = "0.27.0", optional = true }

[workspace] 
members = [
	"board_plugin"
]
